# MatrixLibrary

./: .gitignore  CMakeLists.txt  README.md
Lib/: CMakeLists.txt
Lib/src/: .matrix.cpp.swp  .matrix.h.swp  matrix.cpp  matrix.h
Test/: CMakeLists.txt
Test/UnitTests/: .UnitTests.cpp.swp  CMakeLists.txt  UnitTests.cpp
main/: CMakeLists.txt  main.cpp
